# src/main/java/com/ajmanre/models/Agency.java
@@ -6,7 +6,10 @@ import org.springframework.data.annotation.Id;
 import org.springframework.data.mongodb.core.mapping.Document;
 
 import javax.validation.constraints.NotBlank;
+import javax.validation.constraints.NotNull;
 import javax.validation.constraints.Size;
+import java.time.LocalDateTime;
+import java.util.List;
 
 @Getter
 @Setter
@@ -14,6 +17,9 @@ import javax.validation.constraints.Size;
 public class Agency {
     @Id
     private String id;
+
+    @NotNull
+    private LocalDateTime updatedAt;
 
     @NotBlank
     @Size(max = 128)
@@ -27,5 +33,9 @@ public class Agency {
 
     @Size(max = 128)
     private String insta;
+
+    private List<Address> addresses;
+
+    private List<Contact> contacts;
 
 }
