# src/main/java/com/ajmanre/models/Project.java
@@ -1,0 +1,12 @@
+package com.ajmanre.models;
+
+import lombok.Getter;
+import lombok.Setter;
+
+@Getter
+@Setter
+public class Project {
+
+    private String name;
+    private String overview;
+}
